--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,17 +23,17 @@ body {
   height: 100vh;
 }
 
-.nav-logo {
-  color: rgb(246, 182, 182);
-  font-size: 35px;
-  border: 1px solid rgb(203, 122, 122);
-  padding: 5px;
-  border-radius: 50%;
-  align-self: center;
-  cursor: pointer;
+.nav-logo { /*סימן הלוגו*/
+    color: rgb(246, 182, 182);
+    font-size: 35px;
+    border: 1px solid rgb(203, 122, 122);
+    padding: 5px;
+    border-radius: 50%;
+    align-self: center;
+    cursor: pointer;
 }
 
-.navbar {
+.navbar { /*סרגל מכוונים*/
   background-color: #333;
   height: 50px;
   display: flex;
